--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@strapi/client": "^1.0.1",
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
